# ADSI

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  manifest.json  pyproject.toml
.github/workflows/: publish-npm.yml  publish-python.yml
adapters/antigravity/: ANTIGRAVITY.md
adapters/codex/: AGENTS.md
adapters/hermes/: HERMES.md
adsi/: __init__.py  adapters.py  cli.py  collectors.py  command_router.py  contrast.py  diffing.py  engine.py  mcp_server.py  models.py  reporters.py  rubric.py  sarif.py  scoring.py  validation.py
docs/: DEVELOPMENT_BLUEPRINT.md  FILE_INVENTORY.txt  FINAL_PRODUCT_AUDIT.md  PRODUCT_ANALYSIS_AND_ROADMAP.md  PUBLISHING.md  PUBLISH_AUDIT.md  STAGE_AUDIT_LOG.md  V3_ARCHITECTURE_AND_PACKAGE_STRATEGY.md
examples/: corelasi_dashboard_audit.v3.json  sloppy_dashboard.html
legacy_examples/: corelasi_dashboard_audit.json  corelasi_dashboard_audit.md
playbooks/: production_ci_playbook.md
prompts/: agent_repair_prompt.v3.md  universal_ui_audit_prompt.v3.md
reports/: antigravity_command_parse_demo.json  contrast_demo.json  sloppy_dashboard_audit.json  sloppy_dashboard_audit.md  sloppy_dashboard_audit_after_demo.json  sloppy_dashboard_diff_demo.json
rubric/: adsi_rubric.v3.json
rules/: heuristics.v3.md
schemas/: adsi_audit.schema.json
scripts/: build-release.sh  prepublish-check.sh  publish-node-token.sh  publish-python-token.sh
tests/: test_command_router.py  test_contrast.py  test_diffing.py  test_engine.py  test_sarif.py  test_scoring.py  test_validation.py
tools/: adsi_score.py
(+7 files in other folders)
